Fix overflow on EstablishmentsCards

--- a/src/Pages/Establishments/Card/Card.css
+++ b/src/Pages/Establishments/Card/Card.css
@@ -11,6 +11,7 @@
   color: black;
   box-shadow: 3px 5px 5px rgba(3, 32, 51, 0.8);
   transition: 400ms;
+  overflow: hidden;
 }
 
 .my__card__container:hover {
